fixed image distortion on small screens in image carousel

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -68,6 +68,7 @@ h3 {
   border-radius: 50px;
   margin-left: auto;
   margin-right: auto;
+  object-fit: scale-down;
 }
 .carousel a {
   margin: 0 auto;
@@ -75,6 +76,12 @@ h3 {
 .carousel-inner {
 background-color: white;
 }
+@media (min-width: 540px) {
+  .carousel img {
+    object-fit: cover;
+  }
+}
+
 @media (min-width: 1000px) {
   .carousel-caption h2 {
     font-size: 1.4rem;
